--- a/a.html
+++ b/a.html
@@ -68,7 +68,7 @@
 <script>
     function validateCode() {
         const code = document.getElementById('codeInput').value;
-        const correctCode = "1234"; // Este es el código que se debe ingresar
+        const correctCode = "lacarademaiaia"; // Este es el código que se debe ingresar
 
         if (code === correctCode) {
             document.getElementById('hola jan welcome to de moodle comunity').style.display = 'block';
