--- a/a.html
+++ b/a.html
@@ -61,7 +61,7 @@
     </div>
 
     <div id="video">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://youtube.com/shorts/BH7WadzA23E?si=V43TYDJ90Gsj0nbd " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
 
@@ -72,7 +72,7 @@
 
         if (code === correctCode) {
             document.getElementById('hola jan welcome to de moodle comunity').style.display = 'block';
-            document.getElementById('videoplayback (2).mp4').style.display = 'block';
+            document.getElementById('https://youtube.com/shorts/BH7WadzA23E?si=V43TYDJ90Gsj0nbd ').style.display = 'block';
         } else {
             alert("Código incorrecto, por favor intenta de nuevo.");
         }
